--- a/1154-RR.25.1/T-SP-RR.25.1-2018-MSW-R.adoc
+++ b/1154-RR.25.1/T-SP-RR.25.1-2018-MSW-R.adoc
@@ -1,6 +1,6 @@
 = ФОРМА ПОЗЫВНЫХ СИГНАЛОВ, ПРИСВОЕННЫХ КАЖДОЙ АДМИНИСТРАЦИЕЙ СВОИМ ЛЮБИТЕЛЬСКИМ И ЭКСПЕРИМЕНТАЛЬНЫМ СТАНЦИЯМ
 :bureau: T
-:docnumber: 
+:docnumber: 1154
 :series: СТАТУС РАДИОСВЯЗИ МЕЖДУ ЛЮБИТЕЛЬСКИМИ СТАНЦИЯМИ РАЗНЫХ СТРАН
 :series1: (в соответствии с положением необязательного характера п. 25.1 Регламента радиосвязи)
 :series2: И
