--- a/976-X.121A/T-SP-X.121A-2011-MSW-E.adoc
+++ b/976-X.121A/T-SP-X.121A-2011-MSW-E.adoc
@@ -1,6 +1,6 @@
 = LIST OF DATA COUNTRY OR GEOGRAPHICAL AREA CODES
 :bureau: T
-:docnumber: 
+:docnumber: 976
 :published-date: 2011-03-15
 // :annex-title: Annex to ITU Operational Bulletin
 // :annex-id: No. 976
