--- a/976-X.121A/T-SP-X.121A-2011-MSW-S.adoc
+++ b/976-X.121A/T-SP-X.121A-2011-MSW-S.adoc
@@ -1,6 +1,6 @@
 = LISTA DE INDICATIVOS DE PAÍS O ZONA GEOGRÁFICA PARA DATOS
 :bureau: T
-:docnumber: 
+:docnumber: 976
 :published-date: 2011-03-15
 // :annex-title-fr: Anexo al Boletín de Explotación de la UIT
 // :annex-id: N.° 976
