--- a/977-X.121B/T-SP-X.121B-2011-MSW-E.adoc
+++ b/977-X.121B/T-SP-X.121B-2011-MSW-E.adoc
@@ -1,6 +1,6 @@
 = LIST OF DATA NETWORK IDENTIFICATION CODES (DNIC)
 :bureau: T
-:docnumber: 
+:docnumber: 977
 :series: ACCORDING TO ITU-T RECOMMENDATION X.121 (10/2000)
 :title: 
 :published-date: 2011-04-01
