--- a/977-X.121B/T-SP-X.121B-2011-MSW-F.adoc
+++ b/977-X.121B/T-SP-X.121B-2011-MSW-F.adoc
@@ -1,6 +1,6 @@
 = LISTE DES CODES D'IDENTIFICATION DE RÉSEAU POUR DONNÉES (CIRD)
 :bureau: T
-:docnumber: 
+:docnumber: 977
 // :annextitle-fr: Annexe au Bulletin d'exploitation de l'UIT
 :series: SELON LA RECOMMANDATION UIT-T X.121 (10/2000)
 :title: 
