--- a/991-PP.RES.21.pp/T-SP-PP.RES.21-2011-MSW-F.adoc
+++ b/991-PP.RES.21.pp/T-SP-PP.RES.21-2011-MSW-F.adoc
@@ -1,6 +1,6 @@
 = Systèmes de rappel (Call-Back) et procédures d'appel alternatives (Résolution 21 Révision PP-2006)
 :bureau: T
-:docnumber: 991-1.XI.2011
+:docnumber: 991
 :title: SYSTÈMES DE RAPPEL (CALL-BACK) ET PROCÉDURES D'APPEL ALTERNATIVES
 :published-date: 2011-11-01
 :status: draft
