--- a/980-F.32/T-SP-F.32-2011-MSW-E.adoc
+++ b/980-F.32/T-SP-F.32-2011-MSW-E.adoc
@@ -1,6 +1,6 @@
 = List of Telex Destination Codes (TDC) and Telex Network Identification Codes (TNIC) - English
 :bureau: T
-:docnumber: 980-15.V.2011
+:docnumber: 980
 :title: LIST OF TELEGRAM DESTINATION INDICATORS
 :published-date: 2011-05-15
 :status: draft
