--- a/955-E.180/T-SP-E.180-2010-MSW-S.adoc
+++ b/955-E.180/T-SP-E.180-2010-MSW-S.adoc
@@ -4,7 +4,7 @@
 :docnumber: 
 :published-date: 2010-05-01
 :status: published
-:doctype: recommendation-annex
+:doctype: service-publication
 :annextitle-es: Anexo al Boletín de Explotación de la UIT
 :annexid: No. 955
 :keywords: 
