--- a/1001-T.35B/T-SP-T.35B-2012-MSW-S.adoc
+++ b/1001-T.35B/T-SP-T.35B-2012-MSW-S.adoc
@@ -6,7 +6,7 @@
 :docnumber: 
 :published-date: 2012-04-01
 :status: published
-:doctype: recommendation-annex
+:doctype: service-publication
 :keywords: 
 :imagesdir: images
 :docfile: T-SP-T.35B-2012-MSW-S.adoc
