--- a/1002-T.35/T-SP-T.35-2012-OAS-MSW-F.adoc
+++ b/1002-T.35/T-SP-T.35-2012-OAS-MSW-F.adoc
@@ -5,7 +5,7 @@
 :docnumber: 
 :published-date: 2012-04-15
 :status: published
-:doctype: recommendation-annex
+:doctype: service-publication
 :annextitle-fr: Annexe au Bulletin d'exploitation de l'UIT
 :annexid: N° 1002
 :keywords: 
