--- a/1002-T.35/T-SP-T.35-2012-OAS-MSW-S.adoc
+++ b/1002-T.35/T-SP-T.35-2012-OAS-MSW-S.adoc
@@ -6,7 +6,7 @@ TELEMÁTICOS
 :docnumber: 
 :published-date: 2012-04-15
 :status: published
-:doctype: recommendation-annex
+:doctype: service-publication
 :annextitle-es: Anexo al Boletín de Explotación de la UIT
 :annexid: N.° 1002
 :keywords: 
