--- a/1154-RR.25.1/T-SP-RR.25.1-2018-MSW-S.adoc
+++ b/1154-RR.25.1/T-SP-RR.25.1-2018-MSW-S.adoc
@@ -6,7 +6,7 @@
 :series2: Y
 :published-date: 2018-08-15
 :status: published
-:doctype: recommendation-status
+:doctype: service-publication
 :keywords: 
 :imagesdir: images
 :docfile: T-SP-RR.25.1-2018-MSW-S.adoc
