--- a/974-F.400/T-SP-F.400-2011-MSW-F.adoc
+++ b/974-F.400/T-SP-F.400-2011-MSW-F.adoc
@@ -5,7 +5,7 @@
 :title: 
 :published-date: 2011-02-15
 :status: published
-:doctype: recommendation-annex
+:doctype: service-publication
 :annextitle-fr: Annexe au Bulletin d'exploitation de l'UIT
 :annexid: N° 974
 :docfile: T-SP-F.400-2011-MSW-F.adoc
