--- a/976-X.121A/T-SP-X.121A-2011-MSW-E.adoc
+++ b/976-X.121A/T-SP-X.121A-2011-MSW-E.adoc
@@ -5,7 +5,7 @@
 // :annex-title: Annex to ITU Operational Bulletin
 // :annex-id: No. 976
 :status: published
-:doctype: recommendation-annex
+:doctype: service-publication
 :keywords: 
 :imagesdir: images
 :docfile: T-SP-X.121A-2011-MSW-E.adoc
